--- a/wagon/lavista.html
+++ b/wagon/lavista.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>La vista</title>
+    <title>FOOD</title>
 </head>
 
 <body>
@@ -102,7 +102,6 @@
             <img src="./images/restaurant .png"  class="wow slideInLeft" alt="">
             <h1 class="text-white wow slideInRight">Syrian Restaurant</h1>
             <p class="text-white">We're the best restaurant in town.</p>
-            <button class="btn btn-danger fa-bounce">Read more</button>
         </div>
         </div>
     </header>
@@ -110,7 +109,27 @@
 
     <!-- About Us  -->
 
-
+    <section id="About" class="mt-5 about">
+        <div class="container">
+            <div class="row overflow-hidden">
+                <div class="col-md-6 ">
+                    <div class="section-img">
+                        <img src="./images/chef-2 (1).jpg" loading="lazy" class="w-75 wow slideInLeft" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex justify-content-center align-items-center">
+                    <div class="about-text wow slideInRight">
+                        <h2 class="text-center"> <span >A</span>bout us</h2>
+                        <h3 class="text-black fs-1 pt-5">We’ve baked every item from the core of our heart to serve you
+                        </h3>
+                        <p class="pt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia quam tenetur eum
+                            ad expedita commodi incidunt quod placeat harum, itaque repudiandae at esse possimus fugiat
+                            maiores ipsa doloribus, doloremque voluptatum?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- End  -->
     <!-- Section welpaper -->
     <section>
@@ -124,7 +143,7 @@
             <div class="row">
                 <div class="col">
                     <div class="about-textt ">
-                        <h2 class="text-center my-5"> <span class="text-warning fs-1">M</span>enu</h2>
+                        <h2 class="text-center my-5"> <span>M</span>enu</h2>
                     </div>
                     <ul class="nav nav-tabs justify-content-center" id="pills-tab" role="tablist">
                         <li class="nav-item">
@@ -183,7 +202,7 @@
     <!-- Section favorite -->
     <div class="container my-5">
         <div class="about-textt">
-            <h2 class="text-center"> <span class="text-warning fs-1">F</span>avorites</h2>
+            <h2 class="text-center"> <span>F</span>avorites</h2>
         </div>
         <div class="row" id="Fav">
 
@@ -200,7 +219,7 @@
         <div class="container my-5 ">
             <div class="row text-center py-5" id="Clients">
                 <div class="about-textt ">
-                    <h2 class="text-center text-white"> <span class="text-warning fs-1">T</span>estimonials</h2>
+                    <h2 class="text-center text-white"> <span>T</span>estimonials</h2>
                 </div>
                 <div data-bs-ride="carousel" id="carouselExampleIndicators" class="carousel slide">
                     <div class="carousel-indicators ">
@@ -301,7 +320,7 @@
         <div class="container mt-5 ">
             <div class="row text-center py-5 wow slideInLeft overflow-hidden">
                 <div class="about-textt ">
-                    <h2 class="text-center"> <span class="text-warning fs-1">C</span>ontact us</h2>
+                    <h2 class="text-center"> <span>C</span>ontact us</h2>
                 </div>
             </div>
             <div class="row text-center offset-md-1 overflow-hidden">
@@ -312,7 +331,7 @@
                         </span>
                     </div>
                     <h6>Address</h6>
-                    <p class="text-center">6834 Hollywood Blvd - Los Angeles CA</p>
+                    <p class="text-center">Aleppo Syrian- Al Azezye</p>
                 </div>
                 <div class="col-md-4 hov ">
                     <div class="ii">
@@ -321,7 +340,7 @@
                         </span>
                     </div>
                     <h6>Email</h6>
-                    <p class="text-center">Support@website.com</p>
+                    <p class="text-center">LaVista@website.com</p>
                 </div>
 
                 <div class="col-md-4 hov ">
@@ -331,7 +350,7 @@
                         </span>
                     </div>
                     <h6>Phone</h6>
-                    <p class="text-center">+20 010 2517 8918</p>
+                    <p class="text-center">+963 810 2517 8918</p>
                 </div>
             </div>
             <div class="row py-5 hov overflow-hidden">
@@ -387,7 +406,7 @@
                     </div>
                     <div class="foot text-white">
                         <p>© Copyright Deniels. All Rights Reserved</p>
-                        <p>Designed by Hammad Alla</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
